--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
         Constants
       </a>
     </li>
+     <li>
+      <a href="https://section-leaders.github.io/test/debug" target="_blank" title="Open the debugging quiz">
+        Debugging
+      </a>
+    </li>
+     <li>
+      <a href="https://section-leaders.github.io/test/glvariables" target="_blank" title="Open the global variables quiz">
+        Global Variables
+      </a>
+    </li>
+     <li>
+      <a href="https://section-leaders.github.io/test/loops" target="_blank" title="Open the loops quiz">
+        Loops
+      </a>
+    </li>
   </ul>
 </body>
   
