--- a/index.html
+++ b/index.html
@@ -1,38 +1,258 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title>
-    Python Help
-  </title>
-  <link rel="stylesheet" href="quiz.css">
+<meta charset="utf-8">
+<title>Python help and practice</title>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+<link href="css/reset.css" rel="stylesheet" />
+<link href="css/reveal.css" rel="stylesheet" />
+<link href="css/theme/python_monokai.css" rel="stylesheet" id="theme" />
+<link href="css/plugin/highlight/monokai.css" rel="stylesheet" />
+<link href="css/codetrace.css" rel="stylesheet" />
+<link href="css/rembold.css" rel="stylesheet" />
+<link href="css/roberts.css" rel="stylesheet" />
+<link href="quiz.css" rel="stylesheet" />
 </head>
-  
 <body>
-  <h1 style="font-family:verdana;">
-    Links to practice problems:
-  </h1>
-  <ul>
-    <li>
-      <a href="https://section-leaders.github.io/test/constants" target="_blank" title="Open the constants quiz">
-        Constants
-      </a>
-    </li>
-     <li>
-      <a href="https://section-leaders.github.io/test/debug" target="_blank" title="Open the debugging quiz">
-        Debugging
-      </a>
-    </li>
-     <li>
-      <a href="https://section-leaders.github.io/test/glvariables" target="_blank" title="Open the global variables quiz">
-        Global Variables
-      </a>
-    </li>
-     <li>
-      <a href="https://section-leaders.github.io/test/loops" target="_blank" title="Open the loops quiz">
-        Loops
-      </a>
-    </li>
-  </ul>
+<div class="reveal">
+<div class="slides">
+
+<section id="Links" class="slide">
+<h2>Python help and practice</h2>
+<div class="Question MultipleChoice">
+Links to python practice:
+</div>
+<li>
+    <a href="https://section-leaders.github.io/test/constants" target="_blank" title="Open the constants quiz">
+      Constants
+    </a>
+  </li>
+   <li>
+    <a href="https://section-leaders.github.io/test/debug" target="_blank" title="Open the debugging quiz">
+      Debugging
+    </a>
+  </li>
+   <li>
+    <a href="https://section-leaders.github.io/test/glvariables" target="_blank" title="Open the global variables quiz">
+      Global Variables
+    </a>
+  </li>
+   <li>
+    <a href="https://section-leaders.github.io/test/loops" target="_blank" title="Open the loops quiz">
+      Loops
+    </a>
+  </li>
+</section>
+
+
+
+<script src="js/reveal.js"></script>
+
+<!-- reveal.js plugins -->
+
+<script src="js/plugin/notes/notes.js"></script>
+<script src="js/plugin/search/search.js"></script>
+<script src="js/plugin/zoom/zoom.js"></script>
+<script src="js/plugin/chart/Chart.min.js"></script>
+<script src="js/plugin/chart/plugin.js"></script>
+<script src="js/plugin/chalkboard/plugin.js"></script>
+<script src="js/plugin/math/math.js"></script>
+<script src="js/plugin/highlight/highlight.js"></script>
+<script src="quiz.js"></script>
+
+<script>
+
+      // Full list of configuration options available at:
+      // https://revealjs.com/config/
+      Reveal.initialize({
+                //autoAnimateEasing: 'ease-in',
+                //autoAnimateDuration: 1.0,
+                //autoAnimateUnmatched: false,
+        // Display controls in the bottom right corner
+        controls: true,
+        // Help the user learn the controls by providing hints, for example by
+        // bouncing the down arrow when they first encounter a vertical slide
+        controlsTutorial: true,
+        // Determines where controls appear, "edges" or "bottom-right"
+        controlsLayout: 'bottom-right',
+        // Visibility rule for backwards navigation arrows; "faded", "hidden"
+        // or "visible"
+        controlsBackArrows: 'faded',
+        // Display a presentation progress bar
+        progress: true,
+        // Display the page number of the current slide
+        slideNumber: true,
+        // Add the current slide number to the URL hash so that reloading the
+        // page/copying the URL will return you to the same slide
+        hash: true,
+        // Push each slide change to the browser history
+        history: true,
+        // Enable keyboard shortcuts for navigation
+        keyboard: true,
+        // Enable the slide overview mode
+        overview: true,
+        // Vertical centering of slides
+        center: false,
+        // Enables touch navigation on devices with touch input
+        touch: true,
+        // Loop the presentation
+        loop: false,
+        // Change the presentation direction to be RTL
+        rtl: false,
+        // see https://revealjs.com/vertical-slides/#navigation-mode
+        navigationMode: 'default',
+        // Randomizes the order of slides each time the presentation loads
+        shuffle: false,
+        // Turns fragments on and off globally
+        fragments: true,
+        // Flags whether to include the current fragment in the URL,
+        // so that reloading brings you to the same fragment position
+        fragmentInURL: false,
+        // Flags if the presentation is running in an embedded mode,
+        // i.e. contained within a limited portion of the screen
+        embedded: false,
+        // Flags if we should show a help overlay when the questionmark
+        // key is pressed
+        help: true,
+        // Flags if speaker notes should be visible to all viewers
+        showNotes: false,
+        // Global override for autoplaying embedded media (video/audio/iframe)
+        // - null: Media will only autoplay if data-autoplay is present
+        // - true: All media will autoplay, regardless of individual setting
+        // - false: No media will autoplay, regardless of individual setting
+        autoPlayMedia: true,
+        // Global override for preloading lazy-loaded iframes
+        // - null: Iframes with data-src AND data-preload will be loaded when within
+        //   the viewDistance, iframes with only data-src will be loaded when visible
+        // - true: All iframes with data-src will be loaded when within the viewDistance
+        // - false: All iframes with data-src will be loaded only when visible
+        preloadIframes: null,
+        // Number of milliseconds between automatically proceeding to the
+        // next slide, disabled when set to 0, this value can be overwritten
+        // by using a data-autoslide attribute on your slides
+        autoSlide: 0,
+        // Stop auto-sliding after user input
+        autoSlideStoppable: true,
+        // Use this method for navigation when auto-sliding
+        autoSlideMethod: null,
+        // Specify the average time in seconds that you think you will spend
+        // presenting each slide. This is used to show a pacing timer in the
+        // speaker view
+        defaultTiming: null,
+        // Enable slide navigation via mouse wheel
+        mouseWheel: false,
+        // Hide cursor if inactive
+        hideInactiveCursor: true,
+        // Time before the cursor is hidden (in ms)
+        hideCursorTime: 5000,
+        // Opens links in an iframe preview overlay
+        previewLinks: false,
+        // Transition style
+        transition: 'slide', // none/fade/slide/convex/concave/zoom
+        // Transition speed
+        transitionSpeed: 'default', // default/fast/slow
+        // Transition style for full page slide backgrounds
+        backgroundTransition: 'fade', // none/fade/slide/convex/concave/zoom
+        // Number of slides away from the current that are visible
+        viewDistance: 3,
+        // Number of slides away from the current that are visible on mobile
+        // devices. It is advisable to set this to a lower number than
+        // viewDistance in order to save resources.
+        mobileViewDistance: 2,
+        // The "normal" size of the presentation, aspect ratio will be preserved
+        // when the presentation is scaled to fit different resolutions. Can be
+        // specified using percentage units.
+        width: 1920,
+        height: 1200,
+        // The display mode that will be used to show slides
+        display: 'block',
+                math: {
+                  <!--mathjax: '../html_srcs/reveal.js/plugin/math/mathjax/tex-mml-chtml.js',-->
+                  <!--config: 'tex-mml-chtml',-->
+                  <!--tex2jax: {-->
+                        <!--inlineMath: [['\\(','\\)']],-->
+                        <!--displayMath: [['\\[','\\]']],-->
+                        <!--balanceBraces: true,-->
+                        <!--processEscapes: false,-->
+                        <!--processRefs: true,-->
+                        <!--processEnvironments: true,-->
+                        <!--preview: 'TeX',-->
+                        <!--skipTags: ['script','noscript','style','textarea','pre','code'],-->
+                        <!--ignoreClass: 'tex2jax_ignore',-->
+                        <!--processClass: 'tex2jax_process'-->
+                  <!--},-->
+                  CommonHTML: {scale: 80},
+                },
+        reveald3: {
+                        runLastState: true, // true/false, default: true
+                        onSlideChangedDelay: 200,
+                        mapPath: false, // true / false / "spefific/path/as/string", default: false
+                        tryFallbackURL: true, // true/false, default false
+                        disableCheckFile: false, //default false
+                 },
+
+        // reveal.js plugins
+        plugins: [
+            RevealMath,
+            RevealHighlight,
+            RevealNotes,
+            RevealSearch,
+            RevealZoom,
+            RevealChart,
+            RevealChalkboard,
+        ],
+        chalkboard: {
+            boardmarkerWidth: 4,
+            chalkWidth: 7,
+            boardmarkers : [
+                { color: 'rgba(248,248,242,1)',
+                  cursor: 'url(' + path + 'img/boardmarker-black.png), auto' },
+                { color: 'rgba(102,217,239,1)',
+                  cursor: 'url(' + path + 'img/boardmarker-blue.png), auto' },
+                { color: 'rgba(249,38,114,1)',
+                  cursor: 'url(' + path + 'img/boardmarker-red.png), auto' },
+                { color: 'rgba(166,226,46,1)',
+                  cursor: 'url(' + path + 'img/boardmarker-green.png), auto' },
+                { color: 'rgba(253,151,31,1)',
+                  cursor: 'url(' + path + 'img/boardmarker-orange.png), auto' },
+                { color: 'rgba(174,129,255,1)',
+                  cursor: 'url(' + path + 'img/boardmarker-purple.png), auto' },
+                { color: 'rgba(255,231,146,1)',
+                  cursor: 'url(' + path + 'img/boardmarker-yellow.png), auto '}
+            ],
+            chalks: [
+                { color: 'rgba(248,248,242,0.5)',
+                  cursor: 'url(' + path + 'img/chalk-white.png), auto' },
+                { color: 'rgba(102,217,239,0.5)',
+                  cursor: 'url(' + path + 'img/chalk-blue.png), auto' },
+                { color: 'rgba(249,38,114,0.5)',
+                  cursor: 'url(' + path + 'img/chalk-red.png), auto' },
+                { color: 'rgba(166,226,46,0.5)',
+                  cursor: 'url(' + path + 'img/chalk-green.png), auto' },
+                { color: 'rgba(253,151,31,0.5)',
+                  cursor: 'url(' + path + 'img/chalk-orange.png), auto' },
+                { color: 'rgba(174,129,255,0.5)',
+                  cursor: 'url(' + path + 'img/chalk-purple.png), auto' },
+                { color: 'rgba(255,231,146,0.5)',
+                  cursor: 'url(' + path + 'img/chalk-yellow.png), auto '}
+            ]
+        },
+        dependencies: [
+            {
+                src: "js/plugin/title-footer/title-footer.js",
+                async: true,
+                callback:
+                    function() {
+                        title_footer.initialize({
+                            css: "css/plugin/title-footer/title-footer.css"
+                        });
+                    }
+             }
+        ],
+    });
+    initQuestions();
+</script>
 </body>
-  
 </html>
