--- a/loops.html
+++ b/loops.html
@@ -14,6 +14,7 @@
         <link href="css/rembold.css" rel="stylesheet" />
         <link href="css/roberts.css" rel="stylesheet" />
         <link href="quiz.css" rel="stylesheet" />
+        <!--Slide content created by Marcus Sacks-->
       </head>
       <body>
         <div class="reveal">
